--- a/render.yaml
+++ b/render.yaml
@@ -4,9 +4,8 @@ services:
   - type: web
     runtime: node
     name: karens-greece-trip
-    # Build from repo root: web-app first, then server deps (single line = one shell)
-    buildCommand: cd web-app && npm ci && npm run build && cd ../server && npm install
-    # Run from repo root so Node resolves server/node_modules when loading server/index.js
+    # All from repo root (no cd): install and build web-app, then install server deps
+    buildCommand: npm install --prefix web-app && npm run build --prefix web-app && npm install --prefix server
     startCommand: node server/index.js
     healthCheckPath: /health
     envVars:
