--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.0",
+    "multer": "^1.4.5-lts.1",
     "openai": "^4.73.0",
     "pdf-parse": "^1.1.1"
   }
